Add More Method to Question 797